add edit habit name

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,8 +7,11 @@
 			<li>daily counter : <%= habit.daily_counter %></li>
 			<li>consecutive counter : <%= habit.consecutive_counter %></li>
 		</ul>
-		<% end %>
+		<a href="/habits/<%= habit.id %>/edit">Edit</a>
+	<% end %>
 </div>
+
+
 
 <form action="/habits" method="post">
 	<input name="habit[habit_name]" placeholder="enter a habit">
