add delete habit

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,8 @@
 			<li>consecutive counter : <%= habit.consecutive_counter %></li>
 		</ul>
 		<a href="/habits/<%= habit.id %>/edit">Edit</a>
+		<a href="/habits/<%= habit.id %>/delete">Delete</a>
+
 	<% end %>
 </div>
 
