--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,9 +3,13 @@
 <head>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
-  <title>Yo Dawg, Wear Your Habit</title>
+  <title>Yo D.O.G. Trainer</title>
 </head>
 <body>
+
+	<div class="header">
+	<h3>Yo Dawg Operant Grooming Trainer</h3>
+	</div>
   <%= yield %>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
