before i break stuff

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -16,11 +16,21 @@
 
 
 
-<form action="/habits" method="post">
+<form id="create-habit" action="/habits" method="post">
 	<input name="habit[habit_name]" placeholder="enter a habit">
 	<input type="submit">
 </form>
 
-<div id="habit-template">
+<!-- <div id="habit-template">
+	<div class="habit-div">
+		<h2>Habit Name</h2>
+			<ul>
+				<li>consecutive counter :</li>
+				<li>total counter : </li>
+			</ul>
+		<a href="/habits/id/done">done!</a>
+		<a href="/habits/id/edit">edit</a>
+		<a href="/habits/id/delete" class="delete">delete</a>
+	</div>
 
-</div>
+</div> -->
