fix submit is rendering new form

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -16,10 +16,7 @@
 
 
 
-<form id="create-habit" action="/habits" method="post">
-	<input name="habit[habit_name]" placeholder="enter a habit">
-	<input type="submit">
-</form>
+<%= erb :'habits/new' %>
 
 <!-- <div id="habit-template">
 	<div class="habit-div">
