--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,7 @@
 	<h3>Yo Dawg Operant Grooming Trainer</h3>
 	</div>
   <%= yield %>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 </body>
