changed default scope of habits to updated_at DESC

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,7 +7,7 @@
 				<li>total counter : <%= habit.total_counter %></li>
 			</ul>
 			<a href="/habits/<%= habit.id %>/done">done!</a>
-			<a href="/habits/<%= habit.id %>/edit">edit</a>
+			<a href="/habits/<%= habit.id %>/edit" id="edit">edit</a>
 			<a href="/habits/<%= habit.id %>/delete" class="delete">delete</a>
 
 	</div>
