change var functions to function declaration

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,9 +14,11 @@
 		<% end %>
 </div>
 
-
-
 <%= erb :'habits/new' %>
+
+<div id="picture">
+
+</div>
 
 <script type="text/template" id="habit-template">
 	<h2><@= habit_name @></h2>
