before i break stuff

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -17,7 +17,7 @@
 <%= erb :'habits/new' %>
 
 <div id="picture">
-
+	<%= erb :pictures %>
 </div>
 
 <script type="text/template" id="habit-template">
