--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -20,7 +20,7 @@
 	<%= erb :pictures %>
 </div>
 
-<script type="text/template" class="hide">
+<script type="text/template" id="habit-template" class="hide">
 	<h2><@= habit_name @></h2>
 		<ul>
 			<li>consecutive counter : <span class="consecutive-counter"><@= consecutive_counter @></span></li>
