working on function to append pictures

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,8 +8,9 @@
 <body>
 
 	<div class="header">
-	<h3>Yo Dawg Operant Grooming Trainer</h3>
+	<!-- <h3>Yo Dawg Operant Grooming Trainer</h3> -->
 	</div>
+  
   <%= yield %>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
