--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,3 +7,16 @@
 
 } 
 
+.header {
+	background-image: url('../fixtures/imgs/xzibit.jpg');
+/*	background-size: 100%;*/
+	height: 300px;
+	width: 500px;
+	z-index = -1;
+  background-repeat: no-repeat;
+  background-size:contain;
+  /*height:692px;
+  width:250px;*/
+
+/*  padding-top: auto;*/
+}
