To do: figure out why pictures don't load sometimes

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,9 +8,10 @@
 <body>
 
 	<div class="header">
-	<!-- <h3>Yo Dawg Operant Grooming Trainer</h3> -->
+	<h1>Yo Dawg</h1>
+  <h3>I hear you like Operant Grooming Training</h3>  
 	</div>
-  
+
   <%= yield %>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
