--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,8 +8,8 @@
 <body>
 
 	<div class="header">
-	<h1>Yo Dawg</h1>
-  <h3>I hear you like Operant Grooming Training</h3>  
+	<h1>Yo <span class="red-dog">D</span>awg</h1>
+  <h3 id="header-bottom">I hear you like <span class="red-dog">O</span>perant <span class="red-dog">G</span>rooming Training</h3>  
 	</div>
 
   <%= yield %>
