--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,10 +7,12 @@
 </head>
 <body>
 
+<div class="tupac">
 	<div class="header">
-	<h1>Yo <span class="red-dog">D</span>awg</h1>
-  <h3 id="header-bottom">I hear you like <span class="red-dog">O</span>perant <span class="red-dog">G</span>rooming Training</h3>  
+  	<h1>Yo <span class="red-dog">D</span>awg</h1>
+    <h3 id="header-bottom">I hear you like <span class="red-dog">O</span>perant <span class="red-dog">G</span>rooming Training</h3>  
 	</div>
+</div> 
 
   <%= yield %>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
