--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,19 @@
 /*#habit-template {
 	display: none;
 }*/
+.header, .habit-name, hr, #habit-container, .habit-each {
+	text-align: center;
+	/*width: 70%;*/
+}	
+
+
 html {
 	background-color: black;
 	color: gray;
+}
+
+body {
+	/*width: 100%;*/
 }
 
 .hide {
@@ -15,25 +25,42 @@ html {
 	background-image: url('../fixtures/imgs/xzibit.jpg');
 /*	background-size: 100%;*/
 	height: 300px;
-	width: 500px;
+	width: 100%;
 	z-index = -1;
   background-repeat: no-repeat;
   background-size:contain;
-  color: white;
-  /*height:692px;
-  width:250px;*/
+  color: #c6c6c6;
+  background-position: center; 
+  /*height:692px;*/
+  /*width:250px;*/
+   /*top: 50%;*/
+	display: block;
+	/*text-align: center;*/
+	/*position: absolute;*/
+	
 
 /*  padding-top: auto;*/
 }
 
+.tupac {
+	text-align: center;
+	/*margin-right: 50%;
+	margin-left: 50%;*/
+}
 #header-bottom {
 	padding-top: 200px;
 }
 
-.red-dog {
-	color: red;
+.red-dog, .counter {
+	/*color: #B20000;*/
+	color: rgba(200,23,52,0.5);
 }
 
-.counter {
-	color: red;
+/*.counter {
+	color: #7E2525;
+}*/
+
+.habit-name {
+	color: #c6c6c6 ;
 }
+
