--- a/app/views/habits/new.erb
+++ b/app/views/habits/new.erb
@@ -1,4 +1,5 @@
 <form id="create-habit" action="/habits" method="post">
+	<label class="create-habit">Add a Habit</label><br>
 	<input name="habit[habit_name]" placeholder="enter a habit">
 	<input type="submit">
 </form>
