Fix image not loading Add API call Ajax Add byebug Much meaning

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
 <div id="habit-container">
 	<div>
 		<h1>Your Budding Habits</h1>
-		<p id="quote"></p>
+		<p id="quote"><%= @joke %></p>
 	</div>
 		<hr>
 		<% @habits.each do |habit|  %>
